--- a/TheWeather/app/src/main/AndroidManifest.xml
+++ b/TheWeather/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="techkids.mad3.theweather">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
 
     <application
         android:allowBackup="true"
@@ -21,7 +20,8 @@
 
         <service
             android:name=".WeatherService"
-            android:exported="false"></service>
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
