Weather Service uses Alarm Manager

--- a/TheWeather/app/src/main/AndroidManifest.xml
+++ b/TheWeather/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:name=".WeatherService"
             android:exported="false">
         </service>
+        <receiver android:name=".NotificationInformation" />
     </application>
 
 </manifest>
